--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -5,8 +5,7 @@
     margin-bottom: 1rem;
     text-align: left;
 }
-  
-  .new-expense__control label {
+.new-expense__control label {
     font-weight: bold;
     margin-bottom: 0.5rem;
     display: block;
@@ -22,5 +21,11 @@
 }
   
 .new-expense__actions {
-    text-align: right;
+    flex-grow:1;
+    display:flex;
+    justify-content:flex-end;
+}
+
+.new-expense__actions button{
+    align-self:flex-end;
 }
